test/testdata/result/not_callable_error.lox
(try 1)(); // error: 'result' value is not callable
